Limit Rotation constraint w/ For Transform and Axis Angle rotation mode crash #46743

Closed
opened 2015-11-10 16:42:26 +01:00 by Thibaut Bequet · 6 comments

System Information
w10 64bit, gt650m

Blender Version
Broken: 2.76b 48f7dd6
Worked: unknown

Short description of error
Limit rotation constraint with For Transform crashes when user selects Axis Angle rotation mode

Exact steps for others to reproduce the error
Give the default cube a Limit Rotation constraint
Activate "For Transform" box
Switch the rotation mode to "Axis Angle" in the Object panel or Properties shelf
Try rotating the cube
Crash

I have no crash with all other rotation modes however.

**System Information** w10 64bit, gt650m **Blender Version** Broken: 2.76b 48f7dd6 Worked: unknown **Short description of error** Limit rotation constraint with For Transform crashes when user selects Axis Angle rotation mode **Exact steps for others to reproduce the error** Give the default cube a Limit Rotation constraint Activate "For Transform" box Switch the rotation mode to "Axis Angle" in the Object panel or Properties shelf Try rotating the cube Crash I have no crash with all other rotation modes however.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThibautBequet

Added subscriber: @ThibautBequet
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can confirm

Can confirm

This issue was referenced by 78836c0211

This issue was referenced by 78836c021101a59886e4881fe57dc26a9a65753d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46743
No description provided.