Fix T46743: Crash w/ limit rotation constraint

Using axis-angle + limit rotations 'Transform' option was crashing.